Java interop example